--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
     publish = "output"
-    command = "poetry install && poetry run ./build"
+    command = "poetry install --no-dev && ./build"
