--- a/content/admin/config.yml
+++ b/content/admin/config.yml
@@ -15,19 +15,25 @@ collections:
   - name: metadata
     label: "Données du site"
     files:
-    - label: "Métadonnées pour les moteurs de recherche"
+    - label: "Métadonnées pour les moteurs de recherche et les réseaux sociaux"
       name: seo_metadata
       file: seo_metadata.yml
       fields:
         - {label: "Titre de l'onglet", name: "page_title", widget: "string"}
         - {label: "Description (pour les moteurs de recherche)", name: "description", widget: "string"}
         - {label: "Mots clés (pour les moteurs de recherche, séparé par des virgules)", name: "keywords", widget: "string"}
+        - {label: "Image à afficher quand l'url est postée sur les réseaux sociaux", name: "social_image", widget: image}
     - label: "Contenu de la bannière et du pied de page"
       name: metadata
       file: metadata.yml
       fields:
-        - {label: "Titre du site (bannière)", name: "title", widget: "string"}
-        - {label: "Sous-titre", name: "subtitle", widget: "markdown"}
+        - {label: "Titre du site (bannière)", name: title, widget: "string"}
+        - {label: "Titre du site (menu de navigation)", name: menu_title, widget: "string"}
+        - {label: "Sous-titre", name: subtitle, widget: "markdown"}
+        - {label: "Nom de domaine associé à l'email de contact", name: email_domain, widget: "string"}
+        - {label: "URL de la page facebook", name: facebook_url, widget: "string"}
+        - {label: "Contenu du footer (copyright etc)", name: copyright, widget: "markdown"}
+
 
   - name: "section" # Used in routes, e.g., /admin/collections/blog
     label: "Sections" # Used in the UI
