Update Données du site “metadata”

--- a/metadata.yml
+++ b/metadata.yml
@@ -1,6 +1,11 @@
-copyright: yay
+title: yay
+menu_title: yay
+subtitle: |-
+  yay \*ha\*
+
+
+
+  hoho
 email_domain: yay
 facebook_url: https://www.facebook.com/drevetmathildeguillon
-menu_title: yay
-subtitle: yay
-title: yay
+copyright: yay
