Update Données du site “seo_metadata”

--- a/content/_seo_metadata.yml
+++ b/content/_seo_metadata.yml
@@ -1,4 +1,6 @@
-page_title: Mathilde Guillon - Docteure Vétérinaire spécialiste du comportement - Toutes espèces
-description: TODO
+page_title: Mathilde Guillon - Docteure Vétérinaire spécialiste du comportement
+  - Toutes espèces
+description: bla youpi
 keywords: TODO
 social_file: TODO
+social_image: /img/hero.jpg
