Update Données du site “seo_metadata”

--- a/content/_seo_metadata.yml
+++ b/content/_seo_metadata.yml
@@ -1,4 +1,6 @@
-page_title: Mathilde Guillon - Docteure Vétérinaire spécialiste du comportement - Toutes espèces
-description: TODO
-keywords: TODO
-social_file: TODO
+page_title: Mathilde Guillon - Docteure Vétérinaire spécialiste du comportement
+  - Toutes espèces
+description: Vétérinaire en médecine du comportement à Poitiers et alentours
+keywords: Vétérinaire, Poitiers, Animaux, Comportementaliste, Ethologie,
+  Comportement, Véthologie
+social_file: /img/mathilde-guillon-vétérinaire-en-médecine-du-comportement-2.png
