Update Données du site “seo_metadata”

--- a/content/_seo_metadata.yml
+++ b/content/_seo_metadata.yml
@@ -1,4 +1,4 @@
-page_title: Mathilde Guillon - Docteure Vétérinaire spécialiste du comportement
+page_title: Mathilde Guillon - Docteure Vétérinaire spécialisée en comportement
   - Toutes espèces
 description: Vétérinaire en médecine du comportement à Poitiers et alentours
 keywords: Vétérinaire, Poitiers, Animaux, Comportementaliste, Ethologie,
