Make pricing description optional

--- a/content/admin/config.yml
+++ b/content/admin/config.yml
@@ -84,6 +84,7 @@ collections:
           - label: Contenu (optionnel, apparait au dessus des prix)
             name: body
             widget: markdown
+            required: false
           - name: pricing
             label: Tarifs
             widget: list
