Update Données du site “seo_metadata”

--- a/content/_seo_metadata.yml
+++ b/content/_seo_metadata.yml
@@ -3,4 +3,4 @@ page_title: Mathilde Guillon - Docteure Vétérinaire spécialisée en comportem
 description: Vétérinaire en médecine du comportement à Poitiers et alentours
 keywords: Vétérinaire, Poitiers, Animaux, Comportementaliste, Ethologie,
   Comportement, Véthologie
-social_file: /img/mathilde-guillon-vétérinaire-en-médecine-du-comportement-2.png
+social_file: /img/mathilde-guillon-vétérinaire-en-médecine-du-comportement-2.png
