Update Données du site “metadata”

--- a/content/_metadata.yml
+++ b/content/_metadata.yml
@@ -1,6 +1,6 @@
 title: Docteure Vétérinaire Mathilde Guillon
-menu_title: Dre Vet Guillon
-hero_image: /img/hero.jpg
+menu_title: Dre Vet Mathilde Guillon
+hero_image: /img/4b28dbc0-2aad-474e-b761-40f9eec179fe.jpeg
 subtitle: |-
   **Médecine du comportement**
 
